# chem-kit-api

./: .gitignore  Dockerfile  README.md  conda-env.yml  docker-compose.yml  pyproject.toml  run_test.sh  start-dev.sh  start.sh
chem_kit_api/: __init__.py  main.py
tests/: data.py  test_api.py  test_chem_kit_api.py
tests/data/: smiles_from_smarts.py  transformations_from_smiles.py
