[tool.poetry]
name = "chem_kit_api"
version = "0.1.3"
description = ""
authors = ["Yann Beauxis <dev@yannbeauxis.net>"]

[tool.poetry.dependencies]
python = "^3.7.1"
# chem_kit = { path = "../chem-kit", develop = true }
chem_kit = "^0.1.3"
fastapi = "^0.63.0"
gunicorn = "^20.0.4"
uvicorn = {extras = ["standard"], version = "^0.13.4"}


[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pylint = "^2.7.2"
rope = "^0.18.0"
pytest-cov = "^2.12.1"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
